Merge: resolve conflito em Main.java e adota versão com menu interativo